--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/daisyui/dist/full.css",
               "src/styles.css"
             ],
             "scripts": []
