--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^14.0.0",
     "@auth0/angular-jwt": "^5.1.2",
     "daisyui": "^2.51.5",
+    "ngx-socket-io": "^4.5.1",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
